--- a/Autofin/css/theme.css
+++ b/Autofin/css/theme.css
@@ -881,6 +881,9 @@ body {
     font-size: 18px;
     line-height: 27px;
     padding: 10px 20px; } }
+.bg-wrap {
+  overflow-x: hidden; }
+
 @media (max-width: 1610px) {
   .top-btn-wrap .btn.num-car, .top-btn-wrap .btn.fac-car {
     font-size: 18px;
