--- a/Autofin/scss/homepage.scss
+++ b/Autofin/scss/homepage.scss
@@ -1541,6 +1541,55 @@
         background-position: center;
     }
 
+.bg-wrap .slider-wrap .item-wrap {
+    float: left;
+    width: 100%;
+    position: relative;
+    margin-right: 0px;
+    min-width: inherit;
+    max-width: inherit;
+    position: relative;
+}
+.bg-wrap .slider-wrap .small-div {
+width: 50%;
+    left: 30px;
+    top: 70px;
+    padding: 25px 20px 25px 30px;
+    position: relative;
+    
+}
+.bg-wrap .slider-wrap .big-div {
+width: 75%;
+    padding: 50px 20px 25px 50px;
+    top: -45px;
+    left: 0px;
+    top: 42px;
+    right: inherit;
+    margin-left: 18%;
+}
+.bg-wrap .slider-wrap a.carousel-control-prev {
+    top: 340px;
+    left: 0px !important;
+}
+.bg-wrap .slider-wrap a.carousel-control-next {
+    right: 10px;
+    top: 340px;
+}
+.bg-wrap .slider-wrap button.close {
+    right: 35px;
+    top: 200px;
+}
+.bg-wrap .slider-wrap .xfact {
+    font-size: 100px;
+    right: 98px;
+    top: 185px;
+}
+.bg-wrap .slider-wrap .xfact span {
+    font-size: 150px;
+    left: 28px;
+    top: 14px;
+}
+
 }
 
 @media only screen and (max-width:900px) {
@@ -1572,9 +1621,51 @@
         width: 67%;
         right: 15px;
     }
-
+    .bg-wrap .slider-wrap .big-div {
+    width: 82%;
+  
+   
+    margin-left: 9%;
+}
+.bg-wrap .slider-wrap .xfact {
+    font-size: 85px;
+    right: 98px;
+    top: 182px;
+}
 }
 
+@media only screen and (max-width:880px) {
+.bg-wrap .slider-wrap .xfact {
+   
+    color: transparent;
+    background-image: url(../img/homepage/xfactors.png);
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-position: 0px;
+    height: 150px;
+    top: 0px;    top: -25px; right: 0px;
+}
+.bg-wrap .slider-wrap .xfact span {
+
+    color: transparent;
+}
+.bg-wrap .slider-wrap .carousel-inner:after {
+    right: 0px;
+    width: 60%;
+}
+.bg-wrap .slider-wrap .big-div {
+    width: calc(100% - 80px);
+    margin-left: 30px;
+}
+.bg-wrap .slider-wrap a.carousel-control-next {
+    right: 25px;
+  
+}
+.bg-wrap .slider-wrap button.close {
+    right: 25px;
+   
+}
+}
 @media only screen and (max-width:850px) {
     .bg-wrap .car-wrap .xvalue {
         left: -40px;
@@ -1769,7 +1860,29 @@
     .bg-wrap .car-wrap {
         min-height: 415px;
     }
+    .bg-wrap .slider-wrap .xfact {
 
+    background-size: 60%;
+ 
+    background-position: right;
+  
+
+}
+.bg-wrap .slider-wrap button.close {
+    right: 25px;
+    top: 230px;
+}
+.bg-wrap .slider-wrap a.carousel-control-next {
+    right: 10px;
+}
+.bg-wrap .slider-wrap .big-div {
+    width: calc(100% - 65px);
+    margin-left: 30px;
+}
+.bg-wrap .slider-wrap button.close {
+    right: 5px;
+    
+}
 }
 
 @media only screen and (max-width:710px) {
@@ -2015,6 +2128,10 @@
         position: relative;
         top: 10px;
     }
+    .bg-wrap .slider-wrap .xfact {
+    background-size: 55%;
+    background-position: 142px 46px;
+}  
 
 }
 
@@ -2062,7 +2179,21 @@
     .bg-wrap .car-wrap .xvalue {
         width: 55%;
     }
+    .bg-wrap .slider-wrap .small-div {
+    width: 75%;
+    left: 5%;
+    top: 70px;
+  
+    margin-left: 7%;
+}
+.bg-wrap .slider-wrap button.close {
 
+    top: 223px;
+}
+.bg-wrap .slider-wrap .big-div .para {
+    font-size: 16px;
+    line-height: 24px;
+}
 }
 
 @media only screen and (max-width:481px) {
@@ -2379,6 +2510,30 @@
 }
 .bg-wrap .car-wrap .xvalue {
     width: 66%;
+}
+.bg-wrap .slider-wrap .small-div {
+ 
+    padding: 20px 15px 20px 25px;
+  
+}
+.bg-wrap .slider-wrap .small-div .title {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0px 0px 10px 0px;
+}
+.bg-wrap .slider-wrap .small-div .para {
+    font-size: 16px;
+    line-height: 24px;
+}
+.bg-wrap .slider-wrap .big-div {
+   
+    padding: 40px 20px 15px 30px;}
+    .bg-wrap .slider-wrap .big-div {
+    width: calc(100% - 70px);
+
+}
+.bg-wrap .slider-wrap a.carousel-control-next {
+    right: 20px;
 }
 }
 @media only screen and (max-width:370px) {
