push code menu changes

--- a/Autofin/css/homepage.css
+++ b/Autofin/css/homepage.css
@@ -1554,7 +1554,8 @@
     bottom: -65px;
     background-size: cover;
     background-position: -172px;
-    height: 180px; }
+    height: 180px;
+    background-position: -390px; }
 
   .contact .left {
     top: -53px;
@@ -1966,10 +1967,11 @@
     font-size: 13px; } }
 @media only screen and (max-width: 376px) {
   .contact {
-    bottom: -55px;
+    bottom: -68px;
     background-size: cover;
     background-position: -390px;
-    height: 180px; }
+    height: 180px;
+    background-position: -390px; }
 
   .contact .left a {
     padding-left: 24px; }
